Test/fuzz_regression.wast
(assert_invalid
	(module binary
		"\00\61\73\6d\01\00\00\00\01\04\01\60\00\00\03\02"
		"\01\00\0a\07\01\05\00\00\0b\1b\6e"
		)
	"error validating binary module: Expected non-empty control stack in select"
	)

(assert_invalid
	(module binary
		"\00\61\73\6d\01\00\00\00\01\84\00\01\60\00\00\03"
		"\84\00\03\00\00\00\0a\aa\00\03\87\80\80\80\00\02"
		"\02\40\0c\00\0b\0b\89\80\80\80\00\00\03\40\41\01"
		"\0d\00\0b\0b\8a\80\80\80\00\00\03\40\41\01\0d\00"
		"\0f\0b\0b"
		)
	"error validating binary module: invalid value type (64)"
	)

(assert_invalid
	(module binary
		"\00\61\73\6d\01\00\00\00\01\0f\01\60\0a\7c\7c\7c"
		"\7c\7c\7c\7c\7c\7c\7c\01\7c\03\02\01\00\0a\31\01"
		"\2f\00\20\00\20\01\20\02\20\03\20\02\20\03\20\04"
		"\20\05\20\06\00\00\00\00\20\09\10\00\00\10\00\0b"
		"\00\0e\04\6e\61\6d\64\01\07\01\01\04\6d\27\69\6e"
		)
	"error validating binary module: Expected non-empty control stack in unreachable"
	)

(assert_invalid
	(module binary
		"\00\61\73\6d\01\00\00\00\01\85\00\01\60\00\01\7f"
		"\03\82\00\01\00\05\84\00\01\29\00\00\0a\ae\00\01"
		"\2c\01\27\2e\03\7f\03\40\3f\00\41\80\80\01\48\04"
		"\40\20\00\28\00\00\04\40\20\04\41\80\87\00\2c\00"
		"\00\6a\03\7f\03\40\2f\00\41\41\2b\0b\0b"
		)
	"error validating binary module: invalid value type (210)"
	)

(assert_invalid
	(module binary
		"\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\01\60"
		"\03\7f\7f\7f\01\7f\03\82\80\80\80\00\01\00\05\84"
		"\80\80\80\00\01\01\10\20\06\86\80\80\80\00\01\7f"
		"\00\41\00\0b\07\88\80\80\80\00\01\04\6d\61\69\6e"
		"\00\00\0a\b0\85\80\80\00\01\ad\05\01\00\00\00\00"
		"\0b\05\43\00\00\00\00\0b\05\43\00\00\00\00\0b\05"
		"\43\00\00\00\00\0b\21\07\03\7d\03\7d\03\7d\03\7d"
		"\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d"
		"\41\8e\9d\ba\f4\78\41\00\41\00\10\00\b2\0b\0b\0b"
		"\0b\0b\0b\0b\0b\0b\0b\0b\0b\60\41\00\41\00\10\00"
		"\b2\43\8e\8e\8e\8e\43\8e\00\0e\7d\41\ec\de\01\41"
		"\00\41\00\10\00\1a\41\00\41\8e\8c\8c\ab\07\75\41"
		"\00\0d\00\b2\43\73\74\00\00\60\41\00\41\00\10\00"
		"\b2\43\6f\6d\3a\3a\60\41\00\41\00\10\00\b2\20\07"
		"\a8\04\7d\20\07\a8\04\7d\20\07\a8\04\7d\20\07\a8"
		"\04\7d\20\07\a8\04\7d\20\07\a8\04\7d\02\7f\41\00"
		"\41\e3\00\6a\0b\41\f5\e6\d1\04\74\04\7d\43\00\00"
		"\00\00\05\43\00\00\00\00\0b\05\43\00\00\00\00\0b"
		"\05\43\00\00\00\00\0b\05\43\00\00\00\00\0b\05\43"
		"\00\00\00\00\0b\05\43\00\00\00\00\0b\05\43\00\00"
		"\00\00\0b\21\07\03\7d\03\7d\03\7d\03\7d\03\7d\03"
		"\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\41\8e\9d"
		"\ba\f4\78\41\00\41\00\10\00\b2\0b\0b\0b\0b\0b\0b"
		"\0b\0b\0b\0b\0b\0b\60\41\00\41\00\10\00\b2\43\8e"
		"\8e\8e\8e\43\8e\00\00\00\60\41\00\41\00\10\00\b2"
		"\60\41\00\41\00\10\00\b2\20\00\2f\01\f4\de\b5\d3"
		"\03\20\04\a8\3a\00\e1\c8\81\70\20\07\a8\2e\01\ed"
		"\f4\e8\01\20\07\a8\77\20\07\a8\0d\00\b2\22\0e\a8"
		"\20\07\a8\20\07\a8\10\00\b2\60\41\ba\f4\e8\01\41"
		"\00\10\00\b2\20\07\a8\04\7d\03\7d\03\7d\03\7d\03"
		"\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03"
		"\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03"
		"\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03"
		"\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03"
		"\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03"
		"\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03"
		"\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03"
		"\7d\03\7d\43\6d\6d\6d\6d\0b\0b\0b\0b\0b\0b\0b\0b"
		"\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b"
		"\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b"
		"\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b"
		"\0b\0b\0b\0b\0b\05\03\7d\03\7d\03\7d\03\7d\03\7d"
		"\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d"
		"\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d"
		"\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d"
		"\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d"
		"\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d"
		"\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d"
		"\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d\03\7d"
		"\43\6d\6d\8e\8e\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b"
		"\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b"
		"\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b"
		"\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b\0b"
		"\0b\0b\0b\60\0b"
		)
	"error validating binary module: Expected non-empty control stack in else"
	)

(assert_invalid
	(module binary
		"\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\01\60"
		"\03\7f\7f\7f\01\7f\03\82\80\80\80\00\01\00\05\84"
		"\80\80\00\01\2f\10\20\06\86\80\80\80\00\01\7f\00"
		"\41\00\0b\07\88\80\80\80\00\01\04\65\61\69\6e\00"
		"\00\0a\9a\81\80\80\00\01\97\01\0b\04\7f\41\00\05"
		"\41\00\0b\04\7f\41\00\05\41\00\0b\04\7f\41\00\05"
		"\41\00\0b\fb\04\7f\41\00\05\41\00\0b\04\7f\41\00"
		"\05\41\00\0b\04\7f\41\00\05\41\00\0b\04\7f\41\00"
		"\41\00\0b\04\7f\41\00\05\41\00\0b\04\7f\41\00\05"
		"\41\00\0b\04\7f\41\00\05\41\00\ff\ff\ff\ff\0b\04"
		"\7f\41\00\05\41\00\0b\04\7f\41\00\05\41\00\0b\04"
		"\7f\41\00\05\41\00\0b\04\7f\41\00\05\41\00\0b\04"
		"\7f\41\00\05\41\00\0b\04\7f\41\00\05\41\00\0b\04"
		"\7f\41\00\05\41\00\0b\04\7f\41\00\05\41\00\0b\41"
		"\00\0d\00\b7\62\0b"
		)
	"error validating binary module: invalid value type (0)"
	)

(assert_invalid
	(module binary
		"\00\61\73\6d\01\00\00\00\01\04\01\60\00\00\03\02"
		"\01\00"
		)
	"error validating binary module: Serialized module contained function declarations, but no corresponding function definition section"
	)

(assert_invalid
	(module quote
		"\80\61\73\6d\01\00\00\00\02\08\01\01\6d\01\66\03"
		"\7f\00"
		)
	"expected '('"
	)

(assert_invalid
	(module quote
		"\00"
		)
	"expected '('"
	)